# lyckyd

./: .gitignore  LICENSE  README.md  __init__.py  gen_script.py  pyproject.toml  sample.py
part_s/: p00_gen_col_cls.py  p00_gen_file.py  p01_check_n_self_patch.py  p01_gen_file.py  p02_self_patch.py  p03_check_df.py  p03_self_patch.py  p03_tag_patch.py  p04_check_n_self_patch.py  p04_tag_col.py  p05_tag_fail.py  p06_tag_raise.py  p07_tag_load.py  p08_tag_setup.py  p09_tag_usage.py
